--- a/package.json
+++ b/package.json
@@ -10,49 +10,50 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.7.1",
-    "@react-native-community/masked-view": "^0.1.5",
-    "@react-navigation/bottom-tabs": "^5.0.0-alpha.22",
-    "@react-navigation/core": "^5.0.0-alpha.24",
-    "@react-navigation/native": "^5.0.0-alpha.16",
-    "@react-navigation/stack": "^5.0.0-alpha.37",
-    "@types/numeral": "^0.0.26",
-    "@types/react-native-vector-icons": "^6.4.4",
-    "axios": "^0.19.0",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.27",
+    "@react-native-async-storage/async-storage": "^1.13.2",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/toolbar-android": "^0.1.0-rc.2",
+    "@react-navigation/bottom-tabs": "^5.11.2",
+    "@react-navigation/core": "^5.14.4",
+    "@react-navigation/native": "^5.8.10",
+    "@react-navigation/stack": "^5.12.8",
+    "@types/numeral": "^0.0.28",
+    "@types/react-native-vector-icons": "^6.4.6",
+    "axios": "^0.21.0",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.32",
     "numeral": "^2.0.6",
-    "react": "^16.13.1",
-    "react-moment": "^0.9.7",
+    "react": "^17.0.1",
+    "react-moment": "^1.0.0",
     "react-native": "0.63.3",
-    "react-native-fast-image": "^7.0.2",
-    "react-native-gesture-handler": "^1.5.2",
-    "react-native-navigation-bar-color": "^1.0.0",
-    "react-native-reanimated": "^1.4.0",
-    "react-native-safe-area-context": "^0.6.1",
-    "react-native-screens": "^1.0.0-alpha.23",
-    "react-native-svg": "^9.13.6",
-    "react-native-vector-icons": "^6.6.0",
-    "react-redux": "^7.1.3",
-    "redux": "^4.0.4",
+    "react-native-fast-image": "^8.3.4",
+    "react-native-gesture-handler": "^1.9.0",
+    "react-native-navigation-bar-color": "^2.0.1",
+    "react-native-reanimated": "^2.0.0-alpha.9.2",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.15.0",
+    "react-native-svg": "^12.1.0",
+    "react-native-vector-icons": "^7.1.0",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
     "redux-multi": "^0.1.12",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/runtime": "^7.8.4",
-    "@react-native-community/eslint-config": "^1.1.0",
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^24.0.23",
-    "@types/react-native": "^0.60.25",
+    "@types/react-native": "^0.63.37",
     "@types/react-test-renderer": "16.9.1",
     "babel-jest": "^25.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "jest": "^25.1.0",
-    "metro-react-native-babel-preset": "^0.59.0",
+    "metro-react-native-babel-preset": "^0.64.0",
     "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "16.13.1",
-    "typescript": "^3.7.3"
+    "typescript": "^4.1.2"
   },
   "jest": {
     "preset": "react-native",
