--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "react-native-navigation-bar-color": "^2.0.1",
     "react-native-reanimated": "^2.0.0-alpha.9.2",
     "react-native-safe-area-context": "^3.1.9",
-    "react-native-screens": "^2.15.0",
+    "react-native-screens": "2.13.0",
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^7.1.0",
     "react-redux": "^7.2.2",
