--- a/package.json
+++ b/package.json
@@ -10,50 +10,50 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.13.2",
+    "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/toolbar-android": "^0.1.0-rc.2",
-    "@react-navigation/bottom-tabs": "^5.11.2",
-    "@react-navigation/core": "^5.14.4",
-    "@react-navigation/native": "^5.8.10",
-    "@react-navigation/stack": "^5.12.8",
-    "@types/numeral": "^0.0.28",
+    "@react-navigation/bottom-tabs": "^5.11.8",
+    "@react-navigation/core": "^5.15.2",
+    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
+    "@types/numeral": "^2.0.1",
     "@types/react-native-vector-icons": "^6.4.6",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "moment": "^2.29.1",
-    "moment-timezone": "^0.5.32",
+    "moment-timezone": "^0.5.33",
     "numeral": "^2.0.6",
-    "react": "^17.0.1",
-    "react-moment": "^1.0.0",
-    "react-native": "0.63.3",
+    "react": "^17.0.2",
+    "react-moment": "^1.1.1",
+    "react-native": "0.64.0",
     "react-native-fast-image": "^8.3.4",
-    "react-native-gesture-handler": "^1.9.0",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-navigation-bar-color": "^2.0.1",
-    "react-native-reanimated": "^2.0.0-alpha.9.2",
-    "react-native-safe-area-context": "^3.1.9",
+    "react-native-reanimated": "^2.0.0",
+    "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "2.13.0",
     "react-native-svg": "^12.1.0",
-    "react-native-vector-icons": "^7.1.0",
-    "react-redux": "^7.2.2",
+    "react-native-vector-icons": "^8.1.0",
+    "react-redux": "^7.2.3",
     "redux": "^4.0.5",
     "redux-multi": "^0.1.12",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
+    "@babel/core": "^7.13.10",
+    "@babel/runtime": "^7.13.10",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^24.0.23",
-    "@types/react-native": "^0.63.37",
-    "@types/react-test-renderer": "16.9.1",
-    "babel-jest": "^25.1.0",
-    "babel-plugin-module-resolver": "^4.0.0",
-    "jest": "^25.1.0",
+    "@types/react-native": "^0.64.0",
+    "@types/react-test-renderer": "17.0.1",
+    "babel-jest": "^26.6.3",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
     "react-native-svg-transformer": "^0.14.3",
-    "react-test-renderer": "16.13.1",
-    "typescript": "^4.1.2"
+    "react-test-renderer": "17.0.1",
+    "typescript": "^4.2.3"
   },
   "jest": {
     "preset": "react-native",
